--- a/shinkan.html
+++ b/shinkan.html
@@ -33,7 +33,8 @@
     <div id="right_side">
      
         <div id="smoothplay1" class="contents">
-            <span id="headline">新歓日程</span>
+            <!--<span id="headline">新歓日程</span>-->
+            <img src="img/akisai_shinkan.jpg" alt="shinkan" width="100%">
         </div>
         
 	</div>
