--- a/news.html
+++ b/news.html
@@ -33,7 +33,7 @@
     <div id="right_side">
      
         <div id="smoothplay1" class="contents">
-            <span id="headline">最新情報</span>
+            <span id="headline">最新情報</span>ooo
         </div>
         
 	</div>
