--- a/sponsor.html
+++ b/sponsor.html
@@ -19,12 +19,12 @@
     
         <ul>
             <li class="sidemenu"><a href="#smoothplay1" id="smoothplay1_a" class="line"><img id="about" alt="about" src="img/about.png" width="100%"></a></li>
-            <li class="sidemenu"><a href="news.html" class="line"><img id="news" alt="news" src="img/news.png" width="100%"></a></li>
-            <li class="sidemenu"><a href="sponsor.html" class="line"><img id="sponsor" alt="sponsor" src="img/sponsor.png" width="100%"></a></li>
-            <li class="sidemenu"><a href="access.html" class="line"><img id="access" alt="access" src="img/access.png" width="100%"></a></li>
-            <li class="sidemenu"><a href="contact.html" class="line"><img id="contact" alt="contact" src="img/contact.png" width="100%"></a></li>
-            <li class="sidemenu"><a href="gallery.html" class="line"><img id="gallery" alt="gallery" src="img/gallery.png" width="100%"></a></li>
-            <li class="sidemenu"><a href="shinkan.html" class="line"><img id="shinkan" alt="shinkan" src="img/shinkan.png" width="100%"></a></li>
+            <li class="sidemenu"><a href="#smoothplay1" class="line"><img id="news" alt="news" src="img/news.png" width="100%"></a></li>
+            <li class="sidemenu"><a href="#smoothplay1" class="line"><img id="sponsor" alt="sponsor" src="img/sponsor.png" width="100%"></a></li>
+            <li class="sidemenu"><a href="#smoothplay1" class="line"><img id="access" alt="access" src="img/access.png" width="100%"></a></li>
+            <li class="sidemenu"><a href="#smoothplay1" class="line"><img id="contact" alt="contact" src="img/contact.png" width="100%"></a></li>
+            <li class="sidemenu"><a href="#smoothplay1" class="line"><img id="gallery" alt="gallery" src="img/gallery.png" width="100%"></a></li>
+            <li class="sidemenu"><a href="#smoothplay1" class="line"><img id="shinkan" alt="shinkan" src="img/shinkan.png" width="100%"></a></li>
             <li id="top"><a href="index.html" id="top_a">TOP</a></li>
         </ul>
     </div>
