favicon, thanks.html追加
favicon thanks.htmlの追加

--- a/access.html
+++ b/access.html
@@ -5,6 +5,8 @@
 	<title>アクセス</title>
 	<link href="css/reset.css" rel="stylesheet">
 	<link href="css/link.css" rel="stylesheet">
+    <link rel="icon" href="img/favicon2.gif" type="image/gif">
+    
     
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
