--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>慶応義塾大学　第25回秋祭</title>
 	<link href="css/reset.css" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
+    <link rel="icon" href="img/favicon2.gif" type="image/gif">
     
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
