--- a/thanks.html
+++ b/thanks.html
@@ -35,36 +35,16 @@
     <div id="right_side">
      
         <div id="smoothplay1" class="contents">
-            <span id="headline">お問い合わせ</span>
-        <div id="form">
-        <p>こちらより秋祭実行員会にお問い合わせいただけます。</p>
-        <p>お問い合わせいただいた内容については適宜対応していきます。</p>
-        <p>以下のフォームを全て適切に埋めた後、送信ボタンを押してください。</p>
-         <!--php部分 -->
-        <form role="form" action="mail.php" method="post">
-        <div class="form-group">
-            <p><label for="exampleInputName1">お名前</label></p>
-            <p><input type="text" class="form-control" id="exampleInputName1" placeholder = "Enter name" name="name" required></p>
-            <p><label for="exampleInputEmail1">E-mail</label></p>
-            <p><input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email" name="email" required></p>
-            <p><label for="exampleInputText1">お問い合わせ内容</label></p>
-            <p><textarea class="form-control" rows="3" cols="55" name="message" required></textarea></p>
+            <span id="headline">送信が完了しました。</span>
+            <div id="greeding">
+                <span id="aisatu"></span>
+                <span id="honbun">
+                    お問い合わせを送信いたしました。ありがとうございました。内容を確認後、ご返信させていただきます。もし数日中に返事がない場合は、正しく受信できていない可能性がございますので、恐れ入りますが再度ご送信、またはこちらまでお問い合わせするようお願い致します。
+                    秋祭実行委員会 akisai2016@google.com
+                </span>
+            </div>
         </div>
-        <button type="submit" value="SEND MESSAGE" class="btn btn-default">
-            送信</button>
-        </form>
-        <h2><br>連絡先</h2>
-        <span id="address">
-        〒252-0082<br>
-        神奈川県藤沢市遠藤 5322<br>
-        Facebook: 秋祭<br>
-        Twitter:@akisai_sfc<br></span>
-        </div>
-
-        </div>
-        <a href="index.html" id="top_sita">TOP</a>
-
+        
 	</div>
-
 </body>
 </html>
