--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 	<title>お問い合わせ</title>
 	<link href="css/reset.css" rel="stylesheet">
 	<link href="css/link.css" rel="stylesheet">
-    <link rel="icon" href="img/favicon2.gif" type="image/gif">
+    <link rel="icon" href="img/favicon.gif" type="image/gif">
     
     
 	
