--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 	<title>秋祭の様子</title>
 	<link href="css/reset.css" rel="stylesheet">
 	<link href="css/link.css" rel="stylesheet">
-    <link rel="icon" href="img/favicon2.gif" type="image/gif">
+    <link rel="icon" href="img/favicon.gif" type="image/gif">
     
     
 	
