スマホ対応完了　
全体気づいたところ修正入ってる
・about（写真変更）
・access（css調整スマホ対応完了）
・indexのright_sideはとにかく改良

--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>秋祭の様子</title>
 	<link href="css/reset.css" rel="stylesheet">
 	<link href="css/link.css" rel="stylesheet">
