--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>秋祭とは</title>
 	<link href="css/reset.css" rel="stylesheet">
 	<link href="css/link.css" rel="stylesheet">
@@ -38,13 +39,15 @@
             <span id="headline">秋祭とは？</span>
         <div id="greeding" id="smoothplay2">
             <span id="aisatu">代表挨拶</span>
-            <span id="honbun"><br>第25回秋祭実行委員会、代表を務めます松室雄大と申します。
+            <span id="honbun"><br><br>第25回秋祭実行委員会、代表を務めます松室雄大と申します。<br>
             昨年度は多くの方々のご支援とご協力を賜りまして、第24回秋祭を盛大に開催することができましたことを略儀ながらこの場をお借りして心より御礼申し上げます。<br>さて、第25回秋祭のテーマは「Canvas For Smile」となっております。<br>このテーマには、SFCをキャンバスに見立て、秋祭にご来場くださった皆さまに自分の色を塗っていただきたい、皆さまの笑顔のために作った秋祭というキャンバスに足を運んで、楽しんでいただきたいといった思いが込められています。
             また、「Canvas For Smile」の頭文字CFSはSFCにちなんでいて慶応義塾大学でも都会から離れたここ湘南藤沢キャンパスでしか出来ないことをしたいという私たちの意志を示しております。<br>本年度は、第25回という節目の年にふさわしいに祭にします。
             実行委員一同、秋祭の成功に向けて精進して参りますので、どうぞ皆さま、よろしくお願い申し上げます。<br><br>第25回秋祭実行委員会 代表 松室雄大
         </div>
-            <img src="img/about_image.png" width="80%">
+            <img src="img/yudai.png" width="60%" id="yudai">
+            <a href="index.html" id="top_sita">TOP</a>
         </div>
+            
 	</div>
 </body>
 </html>
