--- a/access.html
+++ b/access.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>アクセス</title>
 	<link href="css/reset.css" rel="stylesheet">
 	<link href="css/link.css" rel="stylesheet">
@@ -40,7 +41,7 @@
         <div id="greeding">
             <span id="aisatu"></span>
             <span id="honbun">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2167.798422312222!2d139.42587832886096!3d35.388160246035945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601853eb433c6aef%3A0x61cbf2412e030b6e!2z5oW25oeJ576p5aG-5aSn5a2mIOa5mOWNl-iXpOayouOCreODo-ODs-ODkeOCuQ!5e0!3m2!1sja!2sjp!4v1459258174455" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe id="link_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2167.798422312222!2d139.42587832886096!3d35.388160246035945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601853eb433c6aef%3A0x61cbf2412e030b6e!2z5oW25oeJ576p5aG-5aSn5a2mIOa5mOWNl-iXpOayouOCreODo-ODs-ODkeOCuQ!5e0!3m2!1sja!2sjp!4v1459258174455" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
             </span>
         </div>
         <div id="syuyou">
