--- a/sponsor.html
+++ b/sponsor.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>ご協賛者様へ</title>
 	<link href="css/reset.css" rel="stylesheet">
 	<link href="css/link.css" rel="stylesheet">
@@ -39,11 +40,11 @@
             
             <div id="greeding">
                 <span id="aisatu">局長挨拶</span>
-                <span id="honbun"><br>昨年度の慶應義塾大学秋祭は、若干の雨に見舞われながらも、盛況の中フィナーレの花火で締めくくることができました。<br>
+                <span id="honbun"><br><br>昨年度の慶應義塾大学秋祭は、若干の雨に見舞われながらも、盛況の中フィナーレの花火で締めくくることができました。<br>
  ひとえにご支援いただいた皆様、ご来場いただいた皆様のおかげと感謝し、略儀ではございますがこの場をお借りして厚く御礼申し上げます。<br>
 慶應義塾大学秋祭は、広告協賛を主としたみなさまからのご支援により運営しております。ご支援頂いた企業様、団体様のお名前は、当日ご来場いただいた方々に配布いたしますパンフレットへの広告掲載、当ウェブサイトでのバナー広告の掲載といった形でご紹介させていただいております。その他にもイベント協賛、物品協賛など様々な形態にてご支援頂いております。ご提案ご要望等ございましたら当ウェブサイトお問い合わせフォームよりご相談下さい。<br>
 今年度の慶應義塾大学秋祭は、25回目という節目にふさわしいものとなるよう実行委員一同、より一層精進してまいりますので、何卒皆様からのご支援賜りたくお願い申し上げます。<br><br>
-第25回秋祭実行員会渉外局長　長野太郎
+第25回秋祭実行員会渉外局長 長野太郎
                 </span>
             </div>
             <a href="index.html" id="top_sita">TOP</a>
