アドレス変更
アドレス変更

--- a/thanks.html
+++ b/thanks.html
@@ -40,7 +40,7 @@
                 <span id="aisatu"></span>
                 <span id="honbun">
                     お問い合わせを送信いたしました。ありがとうございました。内容を確認後、ご返信させていただきます。もし数日中に返事がない場合は、正しく受信できていない可能性がございますので、恐れ入りますが再度ご送信、またはこちらまでお問い合わせするようお願い致します。
-                    秋祭実行委員会 akisai2016@google.com
+                    秋祭実行委員会 aki16-contact@google.com
                 </span>
             </div>
         </div>
