--- a/access.html
+++ b/access.html
@@ -46,22 +46,22 @@
         </div>
         <div id="syuyou">
                 <p>主要駅からのアクセス</p>
-                <br/><img src="img/access_trianggle.png">東京駅から
-                <br/><span class="yajirushi">JR東海道線　　横浜市営地下鉄ブルーライン</span>
-                <br/>東京<img src="img/access_yajirushi-01.png">戸塚<img src="img/access_yajirushi-01.png">湘南台（約50分）
-                <br/><span class="yajirushi">JR東海道線</span>
-                <br/><img src="img/access_yajirushi-02.png">辻堂（約50分）
+                <p><img src="img/access_trianggle.png">東京駅から</p>
+                <span class="yajirushi">JR東海道線</span><span class ="yajirushi2">横浜市営地下鉄ブルーライン</span><br>
+                東京<img src="img/access_yajirushi-01.png">戸塚<img src="img/access_yajirushi-01.png">湘南台（約50分）<br>
+                <span class="yajirushi">JR東海道線</span><br>
+                <img class="yajirushi3"src="img/access_yajirushi-02.png">辻堂（約50分）<br>
                 <p><img src="img/access_trianggle.png">新宿駅から</p>
-                <br/><span class="yajirushi">小田急線・急行</span>
-                <br/>新宿<img src="img/access_yajirushi-01.png">湘南台（約50分）
+                <span class="yajirushi">小田急線・急行</span><br>
+                新宿<img src="img/access_yajirushi-01.png">湘南台（約50分）<br>
                 <p><img src="img/access_trianggle.png">横浜駅から</p>
-                <br/><span class="yajirushi">横浜市営地下鉄ブルーライン</span>
-                <br/>横浜<img src="img/access_yajirushi-01.png">湘南台（約40分）
-                <br/><span class="yajirushi">JR東海道線　　横浜市営地下鉄ブルーライン</span> 
-                <br/><img src="img/access_yajirushi-02.png">戸塚<img src="img/access_yajirushi-01.png">湘南台（約40分）
+                <span class="yajirushi">横浜市営地下鉄ブルーライン</span><br>
+                横浜<img src="img/access_yajirushi-01.png">湘南台（約40分）<br>
+                <span class="yajirushi">JR東海道線</span><span class="yajirushi2">横浜市営地下鉄ブルーライン</span><br> 
+                <img class="yajirushi3" src="img/access_yajirushi-02.png">戸塚<img src="img/access_yajirushi-01.png">湘南台（約40分）<br>
                 <p><img src="img/access_trianggle.png">新横浜駅から</p>
-                <br/><span class="yajirushi">横浜市営地下鉄ブルーライン</span>
-                <br/>新横浜駅<img src="img/access_yajirushi-01.png">湘南台（約50分）
+                <span class="yajirushi">横浜市営地下鉄ブルーライン</span><br>
+                新横浜駅<img src="img/access_yajirushi-01.png">湘南台（約50分）<br>
             </div>
             <div id="moyori">
                 <p>最寄り駅からのアクセス</p>
