--- a/access.html
+++ b/access.html
@@ -34,7 +34,7 @@
     
     <div id="right_side">
      
-        <div id="smoothplay1">
+        <div>
             <span id="headline">アクセス</span>
         <div id="greeding">
             <span id="aisatu"></span>
