--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     
     <div id="right_side">
      
-        <div id="smoothplay1" class="contents">
+        <div class="contents">
             <span id="headline">お問い合わせ</span>
         <div id="form">
         <p>こちらより秋祭実行員会にお問い合わせいただけます。</p>
