--- a/news.html
+++ b/news.html
@@ -33,7 +33,7 @@
     
     <div id="right_side">
      
-        <div id="smoothplay1" class="contents">
+        <div class="contents">
             <span id="headline">最新情報</span>
             <div id="greeding">
                 <span id="aisatu">更新履歴
