--- a/access.html
+++ b/access.html
@@ -14,7 +14,7 @@
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5zG29RpMJKx3CWxRSwiUPW2-9Bz1hvjE"
   type="text/javascript"></script>
     <script src="index.js"></script>
-<body　onload="test();">
+<body>
     
     <div id="left_side">
         
