--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li class="smart_menu"><a href="#"><img id="smart_access" alt="about" src="img/access_icon.png" width="100%"></a></li>
         <li class="smart_menu"><a href="#"><img id="smart_contact" alt="about" src="img/contact_icon.png" width="100%"></a></li>
         <li class="smart_menu"><a href="#"><img id="smart_gallery" alt="about" src="img/gallery_icon.png" width="100%"></a></li>
-        <li class="smart_menu"><img id="smart_shinkan" alt="about" src="img/shinkan_icon.png" width="100%"></li>
+        <li class="smart_menu"><a href="#"><img id="smart_shinkan" alt="about" src="img/shinkan_icon.png" width="100%"></a></li>
         </ul>
  </div>
     
