--- a/shinkan.html
+++ b/shinkan.html
@@ -13,7 +13,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<!--<script type="text/javascript" src="jquery.smoothScroll.js"></script>-->
     <script src="index.js"></script>
-<body onunload="test">
+<body>
     
     <div id="left_side">
         
