ギャラリー準備中テキスト追加

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             実行委員一同、秋祭の成功に向けて精進して参りますので、どうぞ皆さま、よろしくお願い申し上げます。<br><br>第25回秋祭実行委員会 代表 松室雄大
             </div>
             <img src="img/yudai.png" width="60%" id="yudai">
-            <a href="index.html" id="top_sita">TOP</a>
+            <a href="index.html" id="top_sita1">TOP</a>
         </div>
             
 	</div>
