--- a/sponsor.html
+++ b/sponsor.html
@@ -45,7 +45,7 @@
 第25回秋祭実行員会渉外局長 長野太郎
                 </span>
             </div>
-            <a href="index.html" id="top_sita">TOP</a>
+            <a href="index.html" id="top_sita1">TOP</a>
             
         </div>
         
